MAJ url en dur enlevée

--- a/views/ajouter_parking.ejs
+++ b/views/ajouter_parking.ejs
@@ -101,7 +101,7 @@
         hint: true,
         highlight: true,
         minLength: 1,
-        remote: 'http://localhost:8080/search_agence?key=%QUERY',
+        remote: '/search_agence?key=%QUERY',
     });
   });
 </script>
