--- a/views/chercher_process.ejs
+++ b/views/chercher_process.ejs
@@ -17,7 +17,7 @@
         $('#num').typeahead({
             hint: true,
             highlight: true,
-            remote: 'http://localhost:8080/search_num?key=%QUERY',
+            remote: '/search_num?key=%QUERY',
         });
       });
     </script>
