--- a/views/Confirmation.ejs
+++ b/views/Confirmation.ejs
@@ -11,7 +11,7 @@
 </div>
 
 <script language="javascript" type="text/javascript">
-window.setTimeout('window.location="http://localhost:8080/profile"; ',3000);</script>
+window.setTimeout('window.location="/profile"; ',3000);</script>
 
 
 </body>
