--- a/views/post_data.ejs
+++ b/views/post_data.ejs
@@ -12,7 +12,7 @@ $(document).ready(function(){
         highlight: true,
         minLength: 1,
         name: 'users',
-        remote: 'http://localhost:8080/search_immat?key=%QUERY',
+        remote: '/search_immat?key=%QUERY',
     });
   });
   $('.typeahead.input-sm').siblings('input.tt-hint').addClass('hint-small');
@@ -22,7 +22,7 @@ $(document).ready(function(){
   <script>
   function updMVA(){
   $.ajax({
-    url: 'http://localhost:8080/search_mva?key='+$( '#myimmat' ).val()+'',
+    url: '/search_mva?key='+$( '#myimmat' ).val()+'',
     dataType: 'json',
     success : function (data) {
       $( '#mva' ).val(data);
@@ -164,7 +164,7 @@ $(document).ready(function(){
 
 
     $.ajax({
-      url: 'http://localhost:8080/search_mva?key='+$( '#myimmat' ).val()+'',
+      url: '/search_mva?key='+$( '#myimmat' ).val()+'',
       dataType: 'json',
 
       success : function (data) {
