--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 	<style>
 		body{
-			padding-top:80px;
+			padding-top:10%;
 			background-attachment: fixed;
 			background-image:url(/images/accueil_background_flou.jpg);
             background-repeat: no-repeat;
