--- a/views/chercher_agence.ejs
+++ b/views/chercher_agence.ejs
@@ -117,7 +117,7 @@
               </div>
             <br>
             <div class="form-group">
-              <input type="text" id='myagence' name="agence" class="typeahead form-control" placeholder="Agence" />
+              <input type="text" id='myagence' name="agence" class="typeahead form-control" placeholder="Agence" required/>
             </div>
 
     			  <button type="submit" class="btn btn-primary pull-right" ><span class="glyphicon glyphicon-ok-sign"></span> Chercher </button>
