--- a/views/chercher_agence_resp.ejs
+++ b/views/chercher_agence_resp.ejs
@@ -143,14 +143,23 @@
   			<tr>
           <th> id </th>
   			<th>  Nom  </th>
-  			<th>  Code site </th>
+  			<th>  Code site 1</th>
+        <th>  Code site 2</th>
+        <th>  Code site 3</th>
+        <th>  Code site 4</th>
+        <th>  Code site 5</th>
+
   			</tr>
   	</div>
   		<% rows.forEach(function(agence){ %>
   			<tr >
   				<td ><span id = 'id'> <%=agence.idAgence%>  </span> </td>
-          <td ><div contenteditable><span id = 'nom'> <%=agence.nom%>  </span> </div></td>
-  				<td> <div contenteditable><span id = 'adresse'> <%=agence.adresse%> </span> </div> </td>
+          <td><input type="text" id='nom' name="nom" class="typeahead form-control" placeholder='<%=agence.nom%>'/></td>
+          <td><input type="text" id='code1' name="code1" class="typeahead form-control" placeholder='<%=agence.code1%>'/></td>
+          <td><input type="text" id='code2' name="code2" class="typeahead form-control" placeholder='<%=agence.code2%>'/></td>
+          <td><input type="text" id='code3' name="code3" class="typeahead form-control" placeholder='<%=agence.code3%>'/></td>
+          <td><input type="text" id='code4' name="code4" class="typeahead form-control" placeholder='<%=agence.code4%>'/></td>
+          <td><input type="text" id='code5' name="code5" class="typeahead form-control" placeholder='<%=agence.code5%>'/></td>
 
   			</tr>
 
@@ -190,7 +199,11 @@
         			url: '/modifier_agence',
         			data : {
         			nom : $( '#nom' ).html(),
-        			adresse : $( '#adresse' ).html(),
+        			code1 : $( '#code1' ).html(),
+              code2 : $( '#code2' ).html(),
+              code3 : $( '#code3' ).html(),
+              code4 : $( '#code4' ).html(),
+              code5 : $( '#code5' ).html(),
               id : $( '#id' ).html()
         				},
 
