fix query add agence

--- a/views/ajouter_parking.ejs
+++ b/views/ajouter_parking.ejs
@@ -126,7 +126,7 @@
   			</tr>
   	</div>
   			<tr >
-  				<td ><div contenteditable><span id = 'nom'> NOM </span> </div></td>
+  				<td ><input type="text" id='nom' name="nom" class="typeahead form-control" placeholder="Nom"/></td>
   				<td><input type="text" id='agence' name="agence" class="typeahead form-control" placeholder="Agence"/>
           </td>
   			</tr>
