fix ajax agence parking

--- a/views/ajouter_agence.ejs
+++ b/views/ajouter_agence.ejs
@@ -160,12 +160,12 @@
         		$.ajax({
         			url: '/data_ajouter_agence',
         			data : {
-        			nom : $( '#nom' ).html(),
-              code1 : $( '#code1' ).html(),
-              code2 : $( '#code2' ).html(),
-              code3 : $( '#code3' ).html(),
-              code4 : $( '#code4' ).html(),
-              code5 : $( '#code5' ).html()
+        			nom : $( '#nom' ).val(),
+              code1 : $( '#code1' ).val(),
+              code2 : $( '#code2' ).val(),
+              code3 : $( '#code3' ).val(),
+              code4 : $( '#code4' ).val(),
+              code5 : $( '#code5' ).val()
 
         				},
 
