--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -84,6 +84,8 @@
 					<li><a href="/agences"> Liste des agences </a></li>
 					<li role="separator" class="divider"></li>
 					<li><a href="/chercher_agence">Chercher/Modifier</a></li>
+					<li role="separator" class="divider"></li>
+					<li><a href="/ajouter_agence">Ajouter</a></li>
 				</ul>
 			</li>
 
@@ -95,6 +97,8 @@
 				<li><a href="/parking"> Liste des parkings </a></li>
 				<li role="separator" class="divider"></li>
 				<li><a href="/chercher_agence">Chercher/Modifier</a></li>
+				<li role="separator" class="divider"></li>
+				<li><a href="/ajouter_parking">Ajouter</a></li>
 			</ul>
 		</li>
 	</ul>
