--- a/views/chercher_parking.ejs
+++ b/views/chercher_parking.ejs
@@ -117,7 +117,7 @@
               </div>
             <br>
             <div class="form-group">
-              <input type="text" id='myparking' name="parking" class="typeahead form-control" placeholder="Parking" />
+              <input type="text" id='myparking' name="parking" class="typeahead form-control" placeholder="Parking" required/>
             </div>
 
     			  <button type="submit" class="btn btn-primary pull-right" ><span class="glyphicon glyphicon-ok-sign"></span> Chercher </button>
