--- a/views/chercher_parking_resp.ejs
+++ b/views/chercher_parking_resp.ejs
@@ -150,15 +150,18 @@
   			<tr >
 
   				<td ><span id = 'id'> <%=parking.idParking%>  </span> </td>
-          <td ><div contenteditable><span id = 'nom'> <%=parking.nom%>  </span> </div></td>
-  				<td> <div contenteditable><span id = 'agence'> <%=parking.agence%> </span> </div> </td>
+
+          <td><input type="text" id='nom' name="nom" class="typeahead form-control" value='<%=parking.nom%>'/></td>
+          <td><input type="text" id='agence' name="agence" class="typeahead form-control" value='<%=parking.agence%>'/></td>
+
+
 
   			</tr>
 
   			<%})%>
   	</table>
 
-<p data-toggle="tooltip" title="su"><button type="button" class="btn btn-danger pull-right"data-toggle="modal" data-target="#delete">Modifier</button></p>
+<p data-toggle="tooltip" title="su"><button type="button" class="btn btn-warning pull-right"data-toggle="modal" data-target="#delete">Modifier</button></p>
 
 <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
   <div class="modal-dialog">
@@ -188,10 +191,10 @@
         function modif(){
 
         		$.ajax({
-        			url: 'http://localhost:8080/modifier_parking',
+        			url: '/modifier_parking',
         			data : {
-        			nom : $( '#nom' ).html(),
-        			agence : $( '#agence' ).html(),
+        			nom : $( '#nom' ).val(),
+        			agence : $( '#agence' ).val(),
               id : $( '#id').html()
         				},
 
@@ -208,7 +211,7 @@
               if (l)
                 {
                   $.ajax({
-                    url: 'http://localhost:8080/supprimer_parking',
+                    url: '/supprimer_parking',
                     data : {
                       id : $( '#id' ).html()
                       },
