--- a/views/chercher_parking_resp.ejs
+++ b/views/chercher_parking_resp.ejs
@@ -18,7 +18,7 @@
             hint: true,
             highlight: true,
             minLength: 1,
-            remote: 'http://localhost:8080/search_parking?key=%QUERY',
+            remote: '/search_parking?key=%QUERY',
         });
       });
     </script>
