--- a/views/tache_reception.ejs
+++ b/views/tache_reception.ejs
@@ -192,7 +192,7 @@
         </div>
 
         <div class="form-group">
-          <input type="text" id='name' class="typeahead form-control" name="nomOperateur" placeholder="Nom de l'opérateur" >
+          <input type="text" id='name' class="typeahead form-control" name="operateur" placeholder="Nom de l'opérateur" >
         </div>
 
         <div class="form-group">
