Correction bug affi + merge de db+responsive mobile

--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <% include header0.ejs %>
+
     <link href="docs/css/bootstrap.min.css" rel="stylesheet">
     <link href="docs/css/highlight.css" rel="stylesheet">
     <link href="dist/css/bootstrap-switch.css" rel="stylesheet">
@@ -116,6 +116,14 @@
         position: fixed;
       }
     </style>
+    <style>
+      body 		{
+      background-size:100% auto;
+      background-attachment: fixed;
+  }
+
+    </style>
+    <% include header0.ejs %>
   </head>
 
   <!--Body-->
