--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title> Locanor  </title>
 	<link rel="SHORTCUT ICON" href="/images/favicon.ico" />
+	<meta name="viewport" content="width=device-width"/>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<meta charset="utf-8">
