--- a/views/header.ejs
+++ b/views/header.ejs
@@ -70,13 +70,13 @@
 					<ul class="dropdown-menu">
 						<li><a href="/fvehicule"> Réception/Checkin </a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="/f44"> F44 préparation </a></li>
+						<li><a href="/f44"> F44 préparation  </a></li>
 						<% if (user.attribut == "administrateur" || user.attribut == "opérateur") { %>
 						<li role="separator" class="divider"></li>
-						<li><a href="/tache_reception">Assigner une réception</a></li>
+						<li><a href="/tache_reception">Assigner un travail </a></li>
 						<% } %>
 						<li role="separator" class="divider"></li>
-						<li><a href="/tache_reception"> Tâches assignées </a></li>
+						<li><a href="/historique_tache_reception"> Travail assigné </a></li>
 					</ul>
 				</li>
 
