--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -68,10 +68,10 @@
 						<li><a href="/f44"> F44 préparation  </a></li>
 						<% if (user.attribut == "administrateur" || user.attribut == "opérateur") { %>
 						<li role="separator" class="divider"></li>
-						<li><a href="/assigner_tache">Assigner une tâche</a></li>
+						<li><a href="/tache_reception">Assigner un travail </a></li>
 						<% } %>
 						<li role="separator" class="divider"></li>
-						<li><a href="/tache_reception"> Tâches assignées </a></li>
+						<li><a href="/historique_tache_reception"> Travail assigné </a></li>
 					</ul>
 				</li>
 
