--- a/views/chercher_process_resp.ejs
+++ b/views/chercher_process_resp.ejs
@@ -48,18 +48,18 @@
         <tr >
           <td ><%=f44.Numero%>  </span> </td>
           <td ><%=f44.mva%>  </span> </td>
-          <td><%=f44.IMMAT%> </span>  </td>
-          <td><%=f44.aspiration_interieur%> </span>  </td>
-          <td><%=f44.lavage_exterieur%> </span>  </td>
-          <td><%=f44.nettoyage_vitre%> </span>  </td>
-          <td><%=f44.nettoyage_parebrise_interieur%> </span>  </td>
-          <td> <%=f44.niveau_huile%> </span>  </td>
-          <td><%=f44.niveau_lave_glace%> </span>  </td>
-          <td> <%=f44.pression_pneus%> </span>  </td>
-          <td><%=f44.controle_carosserie%> </span>  </td>
-          <td><%=f44.controle_interieur%> </span>  </td>
-          <td><%=f44.remplissage_carburant%> </span>  </td>
-          <td><%=f44.nomOperateur%> </span>  </td>
+          <td><%=f44.immat%> </span>  </td>
+          <td><%=f44.aspiration_interieur ? 'Faite' : 'A Faire' %>  </span>  </td>
+          <td><%=f44.lavage_exterieur ? 'Faite' : 'A Faire'%> </span>  </td>
+          <td><%=f44.nettoyage_vitre ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td><%=f44.nettoyage_parebrise_interieur ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td> <%=f44.niveau_huile ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td><%=f44.niveau_lave_glace ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td> <%=f44.pression_pneus ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td><%=f44.controle_carosserie ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td><%=f44.controle_interieur ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td><%=f44.remplissage_carburant ? 'Faite' : 'A Faire' %> </span>  </td>
+          <td><%=f44.nomOperateur? 'Faite' : 'A Faire' %> </span>  </td>
 
         </tr>
 
