--- a/views/tache_reception.ejs
+++ b/views/tache_reception.ejs
@@ -166,12 +166,10 @@ input[type=number]::-webkit-outer-spin-button {
 
         <div class="form-group">
 					<label>Travail : </label>
-                  <select name="tache" class="form-control select select-primary" data-toggle="select">
+                  <select name="type" class="form-control select select-primary" data-toggle="select" required>
                       <option value="0" selected>Choisir une tache</option>
-                    <option value="immatriculation">Immatriculation</option>
-                    <option value="ON MOVE">ON MOVE</option>
-                    <option value="REG">REG</option>
-                    <option value="MARSHALLED">MARSHALLED</option>
+                    <option value="process_f44">F44</option>
+                    <option value="process_check_in">ON MOVE</option>
                   </select>
 									<br>
         </div>
