--- a/views/update.ejs
+++ b/views/update.ejs
@@ -44,7 +44,7 @@
   	    <% rows.forEach(function(users){ %>
   			<tr >
   			    <td> <%=users.username%></td>
-  			    <td><p data-toggle="tooltip" title="su"><button type="button" class="btn btn-warning pull-right"data-toggle="modal" data-target="#delete" data-user='<%=users.username%>'>Supprimer</button></p></td>
+  			    <td><p data-toggle="tooltip" title="su"><button type="button" class="btn btn-warning"data-toggle="modal" data-target="#delete" data-user='<%=users.username%>'>Supprimer</button></p></td>
   			</tr>
   		<%})%>
   	</table>
