--- a/views/tache_reception.ejs
+++ b/views/tache_reception.ejs
@@ -169,7 +169,7 @@ input[type=number]::-webkit-outer-spin-button {
                   <select name="type" class="form-control select select-primary" data-toggle="select" required>
                       <option value="0" selected>Choisir une tache</option>
                     <option value="process_f44">F44</option>
-                    <option value="process_check_in">ON MOVE</option>
+                    <option value="process_check_in">Checkin</option>
                   </select>
 									<br>
         </div>
