Redirection automatique + completion
Gestion des processus en attente et completion auto

--- a/views/chercher_vehicule_resp.ejs
+++ b/views/chercher_vehicule_resp.ejs
@@ -253,7 +253,7 @@
           <td><%=f44.pression_pneus ? 'Fait' : 'Non fait'%></span>  </td>
           <td><%=f44.controle_carosserie ? 'Fait' : 'Non fait'%></span>  </td>
           <td><%=f44.controle_interieur ? 'Fait' : 'Non fait'%></span>  </td>
-          <td><%=f44.remplissage_carburant%></span>  </td>
+          <td><%=f44.remplissage_carburant ? 'Fait' : 'Non fait' %></span>  </td>
           <td><%=f44.nomOperateur%> </span></td>
 
         </tr>
