historique des receptions

--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -132,6 +132,7 @@ input[type=number]::-webkit-outer-spin-button {
       </div>
    </div>
    <div class="tab-content">
+           <a type="button" class="btn btn-default" href="/historique_reception"><span class="glyphicon glyphicon-list"> Historique</a>
       <div class="tab-pane active" id="step1">
       <div class="form-area">
           <form role="form" id="form1" action="/fvehicule" method="post">
