--- a/views/historique_tache_reception.ejs
+++ b/views/historique_tache_reception.ejs
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 	<head>
-		<% include header.ejs %>
+		<% include header_.ejs %>
         <link href="docs/css/bootstrap.min.css" rel="stylesheet">
     <link href="docs/css/highlight.css" rel="stylesheet">
     <link href="http://getbootstrap.com/assets/css/docs.min.css" rel="stylesheet">
